--- a/css/style.css
+++ b/css/style.css
@@ -439,8 +439,9 @@ section.map svg {
   z-index: 10;
 }
 #map {
+  overflow: hidden;
   width: 100%;
-  height: 220px;
+  height: 300px;
 }
 /*СТИЛИ КНОПОК СЛАЙДЕРА*/
 .slider-controls {
