--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@ body {
   font-size: 18px;
   border: solid 2px #fff;
   border-radius: 30px;
+  -webkit-border-radius: 30px;
   margin-top: 30px;
   margin-bottom: 28px;
   cursor: pointer;
