--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,10 @@ body {
   font-size: 18px;
   border: solid 2px #fff;
   border-radius: 30px;
-  -webkit-border-radius: 30px;
+border-top-left-radius: 30px;
+border-top-right-radius: 30px;
+border-bottom-left-radius: 30px;
+border-bottom-right-radius: 30px;
   margin-top: 30px;
   margin-bottom: 28px;
   cursor: pointer;
