--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,8 @@ body {
   width: 30px;
   height: 4px;
   background-color: #fff;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
   transform: rotate(45deg);
 }
 .menu-item .menu-close::after {
@@ -105,6 +107,8 @@ body {
   width: 30px;
   height: 4px;
   background-color: #fff;
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
   transform: rotate(-45deg);
 }
 .handled {
@@ -122,10 +126,6 @@ body {
   font-size: 18px;
   border: solid 2px #fff;
   border-radius: 30px;
-border-top-left-radius: 30px;
-border-top-right-radius: 30px;
-border-bottom-left-radius: 30px;
-border-bottom-right-radius: 30px;
   margin-top: 30px;
   margin-bottom: 28px;
   cursor: pointer;
