--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,8 @@ body {
   width: 50px;
   height: 4px;
   background-color: #fff;
+  -webkit-transform: none;
+  -moz-transform: none;
   transform: none;
   box-shadow: 0px 10px 0px #fff,
 0px 20px 0px #fff;
