--- a/css/style.css
+++ b/css/style.css
@@ -130,9 +130,14 @@ body {
   margin-bottom: 28px;
   cursor: pointer;
 }
+.download-btn:hover {
+  background-color: #fff;
+  color: #d22856;
+}
 .OS-images {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 210px;
   margin: 0px auto;
 }
@@ -408,7 +413,7 @@ section.contacts {
   margin: 0 auto;
   text-align: center;
   position: relative;
-  padding-bottom: 100px;
+  padding-bottom: 10px;
 }
 @media (@min-width: 768px) {
   section.contacts {
